// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders feature full header properly 1`] = `
<div
  className="sc-bZQynM gHjOeL"
  data-type="fullscreen"
>
  <div>
    <div
      className="sc-ifAKCX eaHLCC"
      src="https://artsy-media-uploads.s3.amazonaws.com/ZR0wtJhg5Nez7Vm8uCP8Nw%2FDSC_0720-Edit-2.jpg"
    />
    <div
      className="sc-bwzfXH gWZoXy"
    />
  </div>
  <div
    className="sc-htpNat gziOsG"
  >
    <div
      className="sc-bxivhb jzEeHb"
    >
      <div
        className="file__Vertical-mi9nrl-2 lhtBqF"
      >
        Art Market
      </div>
      <div
        className="file__Title-mi9nrl-1 ixuaPH"
      >
        New York's Next Art District
      </div>
      <div
        className="file__SubHeader-mi9nrl-5 bppYha"
      >
        <div
          className="file__SubHeaderText-mi9nrl-6 kGgqCD"
        >
          Nulla vitae elit libero, a pharetra augue. Vestibulum id ligula porta felis euismod semper.
        </div>
        <div
          className="file__AuthorDateContainer-s1wj0un0-0 hkBtwO"
        >
          <div
            className="sc-bdVaJa eYectO"
          >
            Molly Gottschalk
          </div>
          <div
            className="sc-bdVaJa eYectO"
          >
            May 19th, 2017 9:09 am
             EST
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders feature split header properly 1`] = `
<div
  className="sc-bZQynM gHjOeL"
  data-type="split"
>
  <div
    className="sc-ifAKCX eaHLCC"
    src="https://artsy-media-uploads.s3.amazonaws.com/ZR0wtJhg5Nez7Vm8uCP8Nw%2FDSC_0720-Edit-2.jpg"
  />
  <div
    className="sc-htpNat gziOsG"
  >
    <div
      className="sc-bxivhb jzEeHb"
    >
      <div
        className="file__Vertical-mi9nrl-2 lhtBqF"
      >
        Art Market
      </div>
      <div
        className="file__Title-mi9nrl-1 ixuaPH"
      >
        New York's Next Art District
      </div>
      <div
        className="file__SubHeader-mi9nrl-5 bppYha"
      >
        <div
          className="file__SubHeaderText-mi9nrl-6 kGgqCD"
        >
          Nulla vitae elit libero, a pharetra augue. Vestibulum id ligula porta felis euismod semper.
        </div>
        <div
          className="file__AuthorDateContainer-s1wj0un0-0 hkBtwO"
        >
          <div
            className="sc-bdVaJa frSGFj"
          >
            Molly Gottschalk
          </div>
          <div
            className="sc-bdVaJa frSGFj"
          >
            May 19th, 2017 9:09 am
             EST
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders feature text header properly 1`] = `
<div
  className="sc-bZQynM gHjOeL"
  data-type="text"
>
  <div
    className="sc-htpNat gziOsG"
  >
    <div
      className="sc-bxivhb jzEeHb"
    >
      <div
        className="file__Vertical-mi9nrl-2 lhtBqF"
      >
        Art Market
      </div>
      <div
        className="file__Title-mi9nrl-1 ixuaPH"
      >
        New York's Next Art District
      </div>
      <div
        className="file__SubHeader-mi9nrl-5 bppYha"
      >
        <div
          className="file__SubHeaderText-mi9nrl-6 kGgqCD"
        >
          Nulla vitae elit libero, a pharetra augue. Vestibulum id ligula porta felis euismod semper.
        </div>
        <div
          className="file__AuthorDateContainer-s1wj0un0-0 hkBtwO"
        >
          <div
            className="sc-bdVaJa gpNTgG"
          >
            Molly Gottschalk
          </div>
          <div
            className="sc-bdVaJa gpNTgG"
          >
            May 19th, 2017 9:09 am
             EST
          </div>
        </div>
      </div>
    </div>
    <img
      className="file__Image-mi9nrl-4 bodpUM"
      src="https://artsy-media-uploads.s3.amazonaws.com/YqTtwB7AWqKD95NGItwjJg%2FRachel_Rossin_portrait_2.jpg"
    />
  </div>
</div>
`;

exports[`renders standard header properly 1`] = `
<div
  className="file__StandardHeaderContainer-s8q9i40-0 eTSHYc"
>
  <div
    className="file__Vertical-s8q9i40-2 fPPwTE"
  >
    Art Market
  </div>
  <div
    className="file__Title-s8q9i40-1 fmUxMp"
  >
    New York's Next Art District
  </div>
  <div
    className="file__AuthorDateContainer-s1wj0un0-0 hkBtwO"
  >
    <div
      className="sc-bdVaJa frSGFj"
    >
      Molly Gottschalk
    </div>
    <div
      className="sc-bdVaJa frSGFj"
    >
      May 19th, 2017 9:09 am
       EST
    </div>
  </div>
</div>
`;
